# pygments-pre-commit

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  index.html  pygments_pre_commit.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
demo/: test_basic_ansi.html  test_basic_pre_commit.html  test_error_unstaged_config_ansi.html  test_error_unstaged_config_pre_commit.html  test_unstaged_changes_ansi.html  test_unstaged_changes_pre_commit.html
testing/: make-index
tests/: pygments_pre_commit_test.py
