[metadata]
name = pygments_pre_commit
version = 2.2.0
description = A pygments lexer for pre-commit output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/pygments-pre-commit
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = pygments_pre_commit
install_requires =
    pygments
python_requires = >=3.7

[options.entry_points]
pygments.lexers =
    pre-commit=pygments_pre_commit:PreCommitLexer

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
